--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -3,30 +3,26 @@
 name: TechTrends - Package with Docker
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   build:
     runs-on: ubuntu-latest
-      -
-        name: Checkout actions v2
+    steps:
+      - name: Checkout actions v2
         uses: actions/checkout@v2
-      -
-        name: QEMU Set up
+      - name: QEMU Set up
         uses: docker/setup-qemu-action@v1
-      -
-        name: Docker Buildx Set up
+      - name: Docker Buildx Set up
         uses: docker/setup-buildx-action@v1
-      -
-        name: DockerHub login
+      - name: DockerHub login
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Build and push
+      - name: Build and push
         uses: docker/build-push-action@v2
         with:
           context: .
@@ -34,4 +30,3 @@ jobs:
           platforms: linux/amd64
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/techtrends:latest
-
