--- a/project/techtrends/Dockerfile
+++ b/project/techtrends/Dockerfile
@@ -2,9 +2,9 @@ FROM python:3.8
 
 EXPOSE 3111
 
-COPY techtrends /app
+COPY techtrends /techtrends
 
-WORKDIR /app
+WORKDIR /techtrends
 
 RUN pip3 install -r requirements.txt && python init_db.py
 
