--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -26,7 +26,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: .
-          file: /techtrends/Dockerfile
+          file: Dockerfile
           platforms: linux/amd64
           push: true
           tags: ${{ secrets.DOCKER_REPO }}:latest
