--- a/argocd/helm-techtrends-staging.yaml
+++ b/argocd/helm-techtrends-staging.yaml
@@ -11,7 +11,7 @@ spec:
   source:
     helm:
       valueFiles:
-        - values-staging
-    path: /helm
+        - values-staging.yaml
+    path: helm
     repoURL: https://github.com/thecaliconoire/flask_blog
     targetRevision: HEAD
