--- a/argocd/helm-techtrends-prod.yaml
+++ b/argocd/helm-techtrends-prod.yaml
@@ -12,6 +12,6 @@ spec:
     helm:
       valueFiles:
         - values-prod.yaml
-    path: /helm
+    path: helm
     repoURL: https://github.com/thecaliconoire/flask_blog
     targetRevision: HEAD
