--- a/helm/values-staging.yaml
+++ b/helm/values-staging.yaml
@@ -4,7 +4,7 @@ replicaCount: 3
 resources:
   requests:
     memory: "90Mi"
-    CPU: "300Mi"
+    cpu: "300m"
   limits:
     memory: "128Mi"
-    CPU: "500m"
+    cpu: "500m"
