--- a/helm/values-prod.yaml
+++ b/helm/values-prod.yaml
@@ -3,8 +3,8 @@ servicePort: 7111
 replicaCount: 5
 resources:
   requests:
-    memory: "128Mi"
-    cpu: "350m"
+    memory: 128Mi
+    cpu: 350m
   limits:
-    memory: "256Mi"
-    cpu: "500m"
+    memory: 256Mi
+    cpu: 500m
