--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -15,12 +15,12 @@ replicaCount: 1
 
 resources:
   requests:
-    memory: "64Mi"
-    cpu: "250m"
+    memory: 64Mi
+    cpu: 250m
 
   limits:
-    memory: "64Mi"
-    cpu: "500m"
+    memory: 64Mi
+    cpu: 500m
 
 containerPort: 3111
 livenessProbe: /healthz
