--- a/helm/templates/deploy.yaml
+++ b/helm/templates/deploy.yaml
@@ -18,7 +18,7 @@ spec:
       containers:
         - name: {{ .Values.image.repository }}
           image:  claytonanzalone/{{ .Values.image.repository }}:{{ .Values.image.tag }}
-          imagePullPolicy: {{ Values.image.PullPolicy }}
+          imagePullPolicy: {{ .Values.image.PullPolicy }}
           ports:
             - containerPort: {{ .Values.containerPort }}
               protocol: TCP
